[package]
edition = "2018"
name = "cargo-expand-mods"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
publish = false
description = "Cargo subcommand to expand only `mod`s"
readme = "README.md"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/qryxip/cargo-expand-mods"

[dependencies]
anyhow = "1.0.28"
arrayvec = "0.5.1"
cargo_metadata = "0.9.1"
itertools = "0.9.0"
quote = "1.0.3"
serde = { version = "1.0.106", features = ["derive"] }
structopt = "0.3.12"
syn = { version = "1.0.17", features = ["full","visit-mut"] }
toml = "0.5.6"
url = "2.1.1"
