[package]
edition = "2018"
name = "cargo-expand-mods"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
publish = false
description = "Cargo subcommand to expand only `mod`s"
readme = "README.md"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/qryxip/cargo-expand-mods"

[dependencies]
anyhow = "1.0.28"
arrayvec = "0.5.1"
atty = "0.2.14"
cargo_metadata = "0.9.1"
derivative = "2.1.1"
duct = "0.13.4"
fixedbitset = "0.2.0"
itertools = "0.9.0"
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }
serde = { version = "1.0.106", features = ["derive"] }
smallvec = "1.3.0"
structopt = "0.3.13"
strum = { version = "0.18.0", features = ["derive"] }
syn = { version = "1.0.17", features = ["full", "visit-mut"] }
termcolor = "1.1.0"
toml = "0.5.6"
url = "2.1.1"
which = { version = "3.1.1", default-features = false }
